switch to K2 on Groq. Also initiate the Prisma MCP client at startup instead of for each call.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@ai-sdk/gateway": "1.0.0-beta.4",
+    "@ai-sdk/groq": "2.0.0-beta.3",
     "@ai-sdk/provider": "2.0.0-beta.1",
     "@ai-sdk/react": "2.0.0-beta.6",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -28,6 +29,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
     "@modelcontextprotocol/sdk": "^1.15.0",
+    "@openrouter/ai-sdk-provider": "1.0.0-beta.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.200.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -47,7 +49,7 @@
     "@vercel/functions": "^2.0.0",
     "@vercel/otel": "^1.12.0",
     "@vercel/postgres": "^0.10.0",
-    "ai": "5.0.0-beta.9",
+    "ai": "5.0.0-beta.19",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
